# stargame

./: .gitignore  CHANGES.md  Doxyfile  Makefile  README.md  Stargame.cbp  Stargame.depend  Stargame.layout  TODO.md  input.xml  installExternals.sh  setup.sh
data/: components.xml  hulls.xml  projectiles.xml  ships.xml
gfx/models/: ship.3ds
physics/src/physics/: CMakeLists.txt  IPhysicsThread.h
physics/src/physics/data/: Fixture.cpp  Fixture.h  Shape.h
physics/src/physics/events/: ObjectUpdateEvent.h  SpawnEvent.h
physics/src/physics/simulation/: CSimulation.cpp  ISimulation.h  ISpawner.h  SUnitConverter.cpp  userdata.h
physics/src/physics/test/: CPhysicsThread_test.cpp  Data_test.cpp  Simulation_test.cpp  Spawner_test.cpp  Test.cbp  UnitConversion_test.cpp
src/: CEngine.cpp  CEngine.h  CInputManager.cpp  CInputManager.h  CIrrMasterEventReceiver.cpp  CIrrMasterEventReceiver.h  CMakeLists.txt  CSoundManager.cpp  CSoundManager.h  CStateManager.cpp  CStateManager.h  CTimeManager.cpp  CTimeManager.h  CUIEventListener.cpp  CUIEventListener.h  IEngine.h  IEventListener.h  IInputManager.h  ISoundManager.h  IState.h  IStateManager.h  ITimeManager.h  IUIEventListener.h  Options.cpp  Options.h  consts.h  main.cpp  util.h
src/Components/: ActionList.cpp  ActionList.h  FuelTank.cpp  FuelTank.h  GunMachine.cpp  GunMachine.h  GunTurrent.h  IAction.h  IComponent.cpp  IComponent.h  IGun.cpp  IGun.h  IWeapon.cpp  IWeapon.h  ShipComponent.cpp  ShipComponent.h
src/GameState/: GameState.cpp  GameState.h  HUD.cpp  HUD.h  IGameModule.h  InputModule.cpp  InputModule.h
(+319 files in other folders)
